--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "node index.js",
     "migrate": "knex migrate:latest",
     "unmigrate": "knex migrate:rollback",
-    "seed": "knex seed:run "
+    "seed": "knex seed:run ",
+    "test": "cross-env NODE_ENV=testing jest --watch"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -25,6 +26,9 @@
     "pg": "^7.18.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "cross-env": "^7.0.0",
+    "jest": "^25.1.0",
+    "nodemon": "^2.0.2",
+    "supertest": "^4.0.2"
   }
 }
